[package]
name = "rusqlite_utils"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "macros",
    "macro_tests"
]

[dependencies.macros]
path = "./macros/"

[dependencies]
rusqlite = "0.28"
serde_json = "1.0"
bson = "2.4"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["clock", "serde"]

[dev-dependencies.rusqlite]
version = "0.28"
features = ["bundled"]
