[package]
name = "rusqlite_utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/MaxBondABE/rusqlite_utils"
documentation = "https://docs.rs/rusqlite_utils"
readme = "README.md"
keywords = ["sqlite", "sqlite3", "rusqlite"]
categories = ["database"]

[workspace]
members = [
    "rusqlite_utils_macros",
    "macro_tests"
]

[dependencies.rusqlite_utils_macros]
version = "0.1.0"
path = "./rusqlite_utils_macros/"

[dependencies]
rusqlite = "0.28"
serde_json = "1.0"
bson = "2.4"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["clock", "serde"]

[dev-dependencies.rusqlite]
version = "0.28"
features = ["bundled"]
